styles.css
.path-local-downloadcenter form fieldset > div > div.fitem.femptylabel {
    display: none;
}

.path-local-downloadcenter form .warningmessage {
    font-size: 1.2em;
    font-weight: bold;
    margin-bottom: 10px;
}
.path-local-downloadcenter .include_setting, .path-local-downloadcenter .grouped_settings .normal_setting {
    display: inline-block;
}

.path-local-downloadcenter .mform .grouped_settings {
    overflow: hidden;
}

.path-local-downloadcenter .mform .block {
    padding-top: 5px;
}

.block_tree p.tree_item.downloadcenterlink.branch,
.block p.tree_item.downloadcenterlink.branch,
.block p.tree_item.downloadcenterlink {
    background-image: none !important;
    padding-left: 0;
}
.block p.tree_item.downloadcenterlink a{
    background-image: url("[[pix:core|t/collapsed]]");
    background-repeat: no-repeat;
    padding-left: 20px;

}

.path-local-downloadcenter .block p.tree_item.downloadcenterlink a {
    background-image: url("[[pix:core|t/collapsed_empty]]");
}

.path-local-downloadcenter .core_progress_display_if_slow {
    width: 500px;
}

.path-local-downloadcenter #mform2 #fitem_id_submitbutton {
    background: none;
    border: 0;
    margin: 0;
    padding: 0;
}


.path-local-downloadcenter form .itemtitle {
    font-weight: normal;
}

.path-local-downloadcenter form .fitemtitle {
    /*position: relative;*/
}

.path-local-downloadcenter form .itemtitle span {
    max-width: 210px;
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline-block;
    white-space: nowrap;
}

.path-local-downloadcenter form .activityicon{
    width: 24px;
    margin-top: -10px;
}


@media(max-width: 1199px) {
    .path-local-downloadcenter form .fitemtitle {
        float: none !important;
    }

    .path-local-downloadcenter form .itemtitle span {
        max-width: 380px;
    }
}

@media(max-width: 499px) {
    .path-local-downloadcenter form .itemtitle span {
        max-width: 150px;
    }

}

